# Django_hw20

./: Dockerfile  devices.csv  docker-compose.yml  orders.csv  pyproject.toml  requirements.txt
mysite/myauth/: forms.py  models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py
mysite/myauth/templates/myauth/: about-me.html  about-me_update_form.html  base.html  login.html  register.html  users-list.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/shopapp/: admin.py  common.py  forms.py  models.py  serializers.py  sitemap.py  urls.py  views.py
mysite/shopapp/migrations/: 0001_initial.py
mysite/shopapp/templates/shopapp/: create-order.html  create-product.html  order_list.html  orders-list-users.html  product_changelist.html  products-list.html  shop-index.html
mysite/templates/: base.html  home.html
